--- a/MarvelApp/MarvelApp/Search/Search.storyboard
+++ b/MarvelApp/MarvelApp/Search/Search.storyboard
@@ -2,27 +2,96 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Search-->
         <scene sceneID="4B8-m1-1JU">
             <objects>
-                <viewController storyboardIdentifier="SearchVC" id="6wp-SH-KDe" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchVC" id="6wp-SH-KDe" customClass="Search" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1A8-DC-LIu">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EBi-pO-vof">
+                                <rect key="frame" x="15" y="288" width="384" height="166"/>
+                                <state key="normal" title="Character"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y9F-hb-1N3">
+                                <rect key="frame" x="15" y="538" width="384" height="182"/>
+                                <state key="normal" title="Commic"/>
+                            </button>
+                            <searchBar contentMode="redraw" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MCS-LV-soO">
+                                <rect key="frame" x="2" y="60" width="410" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="LEb-nd-diw"/>
-                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Y9F-hb-1N3" firstAttribute="top" secondItem="EBi-pO-vof" secondAttribute="bottom" constant="20" id="09m-qT-ue9"/>
+                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="EBi-pO-vof" secondAttribute="trailing" constant="15" id="AMD-IV-oSg"/>
+                            <constraint firstItem="MCS-LV-soO" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="2" id="O4h-oH-jQD"/>
+                            <constraint firstItem="Y9F-hb-1N3" firstAttribute="top" secondItem="EBi-pO-vof" secondAttribute="bottom" constant="20" id="ggA-oJ-qfe"/>
+                            <constraint firstItem="EBi-pO-vof" firstAttribute="top" secondItem="MCS-LV-soO" secondAttribute="bottom" constant="120" id="hOi-D3-7wh"/>
+                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="Y9F-hb-1N3" secondAttribute="trailing" constant="15" id="m2g-wg-Tus"/>
+                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="MCS-LV-soO" secondAttribute="trailing" constant="2" id="p90-kY-dfb"/>
+                            <constraint firstItem="Y9F-hb-1N3" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="15" id="pcI-d4-G5z"/>
+                            <constraint firstItem="EBi-pO-vof" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="15" id="qMe-Mq-mhS"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Search" id="SuD-24-5ax"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cfy-xt-feb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1397.1014492753625" y="152.67857142857142"/>
+            <point key="canvasLocation" x="1409" y="153"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="prB-hH-FhD">
+            <objects>
+                <viewController id="Zcu-Cu-5QD" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GQL-UL-5Pe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="PXa-Dv-SMf">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vWc-Fq-SXr">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="tCh-lE-pj2">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Q3x-L2-Ht8">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="upM-rU-Md1"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="PXa-Dv-SMf" firstAttribute="top" secondItem="GQL-UL-5Pe" secondAttribute="top" id="1Wm-Cg-yG3"/>
+                            <constraint firstItem="PXa-Dv-SMf" firstAttribute="leading" secondItem="upM-rU-Md1" secondAttribute="leading" id="Gw9-GR-opW"/>
+                            <constraint firstAttribute="bottom" secondItem="PXa-Dv-SMf" secondAttribute="bottom" id="qc3-93-JhV"/>
+                            <constraint firstItem="PXa-Dv-SMf" firstAttribute="trailing" secondItem="upM-rU-Md1" secondAttribute="trailing" id="uNC-mF-Xbk"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CGh-dI-bc5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2185.507246376812" y="152.67857142857142"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="GqJ-0F-mcK">
@@ -30,6 +99,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="6mo-bn-adV" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xKh-0g-H2y">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -43,8 +113,8 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
