Tentativas de ajustar o segmented ao UI

--- a/MarvelApp/MarvelApp/Profile/Profile.storyboard
+++ b/MarvelApp/MarvelApp/Profile/Profile.storyboard
@@ -56,9 +56,8 @@
                                     <constraint firstAttribute="trailing" secondItem="7MN-zW-EHX" secondAttribute="trailing" id="zgk-Rq-3dV"/>
                                 </constraints>
                             </view>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hmN-ko-WU8">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" highlighted="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hmN-ko-WU8">
                                 <rect key="frame" x="52" y="170.5" width="310" height="45"/>
-                                <color key="backgroundColor" red="0.062745098039215685" green="0.062745098039215685" blue="0.062745098039215685" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Lcy-2B-2V5"/>
                                 </constraints>
@@ -66,8 +65,8 @@
                                     <segment title="Characters"/>
                                     <segment title="Comics"/>
                                 </segments>
-                                <color key="tintColor" red="0.99019607840000001" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="selectedSegmentTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="selectedSegmentTintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="changeCollectionView:" destination="ggd-AK-drP" eventType="valueChanged" id="fCm-OE-HPd"/>
                                 </connections>
