--- a/MarvelApp/MarvelApp/Search/Search.storyboard
+++ b/MarvelApp/MarvelApp/Search/Search.storyboard
@@ -18,37 +18,38 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EBi-pO-vof">
-                                <rect key="frame" x="15" y="288" width="384" height="166"/>
+                                <rect key="frame" x="32" y="300" width="350" height="197"/>
                                 <state key="normal" title="Character"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y9F-hb-1N3">
-                                <rect key="frame" x="15" y="538" width="384" height="182"/>
+                                <rect key="frame" x="32" y="554" width="350" height="212"/>
                                 <state key="normal" title="Commic"/>
                             </button>
                             <searchBar contentMode="redraw" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MCS-LV-soO">
-                                <rect key="frame" x="2" y="60" width="410" height="44"/>
+                                <rect key="frame" x="20" y="74" width="374" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="LEb-nd-diw"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Y9F-hb-1N3" firstAttribute="top" secondItem="EBi-pO-vof" secondAttribute="bottom" constant="20" id="09m-qT-ue9"/>
-                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="EBi-pO-vof" secondAttribute="trailing" constant="15" id="AMD-IV-oSg"/>
-                            <constraint firstItem="MCS-LV-soO" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="2" id="O4h-oH-jQD"/>
-                            <constraint firstItem="Y9F-hb-1N3" firstAttribute="top" secondItem="EBi-pO-vof" secondAttribute="bottom" constant="20" id="ggA-oJ-qfe"/>
-                            <constraint firstItem="EBi-pO-vof" firstAttribute="top" secondItem="MCS-LV-soO" secondAttribute="bottom" constant="120" id="hOi-D3-7wh"/>
-                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="Y9F-hb-1N3" secondAttribute="trailing" constant="15" id="m2g-wg-Tus"/>
-                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="MCS-LV-soO" secondAttribute="trailing" constant="2" id="p90-kY-dfb"/>
-                            <constraint firstItem="Y9F-hb-1N3" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="15" id="pcI-d4-G5z"/>
-                            <constraint firstItem="EBi-pO-vof" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="15" id="qMe-Mq-mhS"/>
+                            <constraint firstItem="EBi-pO-vof" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="32" id="1l3-Ej-B5z"/>
+                            <constraint firstItem="Y9F-hb-1N3" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="32" id="AU8-B6-OM0"/>
+                            <constraint firstItem="Y9F-hb-1N3" firstAttribute="top" secondItem="EBi-pO-vof" secondAttribute="bottom" constant="100" id="C3X-UQ-rjh"/>
+                            <constraint firstItem="EBi-pO-vof" firstAttribute="top" secondItem="MCS-LV-soO" secondAttribute="bottom" constant="170" id="G1A-Hr-ia6"/>
+                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="MCS-LV-soO" secondAttribute="trailing" constant="20" id="RSR-Dj-egZ"/>
+                            <constraint firstItem="MCS-LV-soO" firstAttribute="top" secondItem="LEb-nd-diw" secondAttribute="top" constant="30" id="cDI-AT-nZY"/>
+                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="EBi-pO-vof" secondAttribute="trailing" constant="32" id="oW5-hd-dv9"/>
+                            <constraint firstItem="MCS-LV-soO" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="20" id="tkP-gD-lcM"/>
+                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="Y9F-hb-1N3" secondAttribute="trailing" constant="32" id="xJ8-uc-Trp"/>
+                            <constraint firstItem="LEb-nd-diw" firstAttribute="bottom" secondItem="Y9F-hb-1N3" secondAttribute="bottom" constant="60" id="xsK-hr-qbj"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Search" id="SuD-24-5ax"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cfy-xt-feb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1409" y="153"/>
+            <point key="canvasLocation" x="1408.6956521739132" y="152.67857142857142"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="prB-hH-FhD">
