--- a/MarvelApp/MarvelApp/Home/CharactersCollectionViewCell.xib
+++ b/MarvelApp/MarvelApp/Home/CharactersCollectionViewCell.xib
@@ -16,17 +16,16 @@
                 <rect key="frame" x="0.0" y="0.0" width="314" height="205"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I1b-4l-Hhd">
-                        <rect key="frame" x="136" y="152" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eqH-nJ-218">
                         <rect key="frame" x="0.0" y="0.0" width="314" height="205"/>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n4L-tb-lVB">
+                        <rect key="frame" x="136" y="140" width="42" height="21"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -39,7 +38,7 @@
             <size key="customSize" width="314" height="205"/>
             <connections>
                 <outlet property="Charecter" destination="eqH-nJ-218" id="VhW-pJ-PtN"/>
-                <outlet property="lblNome" destination="I1b-4l-Hhd" id="Fgx-ey-mAE"/>
+                <outlet property="label" destination="n4L-tb-lVB" id="tF9-UP-dTy"/>
             </connections>
             <point key="canvasLocation" x="257.97101449275362" y="35.825892857142854"/>
         </collectionViewCell>
