--- a/MarvelApp/MarvelApp/Search/Search.storyboard
+++ b/MarvelApp/MarvelApp/Search/Search.storyboard
@@ -17,50 +17,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EBi-pO-vof">
-                                <rect key="frame" x="32" y="300" width="350" height="197"/>
-                                <state key="normal" title="Character"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EBi-pO-vof">
+                                <rect key="frame" x="32" y="221" width="350" height="196"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <state key="normal" title="Character" image="Intersecao_3">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="characterButon:" destination="6wp-SH-KDe" eventType="touchUpInside" id="L6Z-Om-omA"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y9F-hb-1N3">
-                                <rect key="frame" x="32" y="554" width="350" height="212"/>
-                                <state key="normal" title="Commic"/>
-                            </button>
-                            <searchBar contentMode="redraw" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MCS-LV-soO">
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="MCS-LV-soO">
                                 <rect key="frame" x="20" y="74" width="374" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y9F-hb-1N3">
+                                <rect key="frame" x="20" y="507" width="374" height="202"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Commic" image="Intersecao_2"/>
+                                <connections>
+                                    <action selector="ComicButton:" destination="6wp-SH-KDe" eventType="touchUpInside" id="S9v-Up-lg4"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="LEb-nd-diw"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="EBi-pO-vof" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="32" id="1l3-Ej-B5z"/>
-                            <constraint firstItem="Y9F-hb-1N3" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="32" id="AU8-B6-OM0"/>
-                            <constraint firstItem="Y9F-hb-1N3" firstAttribute="top" secondItem="EBi-pO-vof" secondAttribute="bottom" constant="100" id="C3X-UQ-rjh"/>
-                            <constraint firstItem="EBi-pO-vof" firstAttribute="top" secondItem="MCS-LV-soO" secondAttribute="bottom" constant="170" id="G1A-Hr-ia6"/>
                             <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="MCS-LV-soO" secondAttribute="trailing" constant="20" id="RSR-Dj-egZ"/>
                             <constraint firstItem="MCS-LV-soO" firstAttribute="top" secondItem="LEb-nd-diw" secondAttribute="top" constant="30" id="cDI-AT-nZY"/>
-                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="EBi-pO-vof" secondAttribute="trailing" constant="32" id="oW5-hd-dv9"/>
                             <constraint firstItem="MCS-LV-soO" firstAttribute="leading" secondItem="LEb-nd-diw" secondAttribute="leading" constant="20" id="tkP-gD-lcM"/>
-                            <constraint firstItem="LEb-nd-diw" firstAttribute="trailing" secondItem="Y9F-hb-1N3" secondAttribute="trailing" constant="32" id="xJ8-uc-Trp"/>
-                            <constraint firstItem="LEb-nd-diw" firstAttribute="bottom" secondItem="Y9F-hb-1N3" secondAttribute="bottom" constant="60" id="xsK-hr-qbj"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Search" id="SuD-24-5ax"/>
+                    <connections>
+                        <segue destination="Zcu-Cu-5QD" kind="show" identifier="result" id="QJ6-Hm-YYy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cfy-xt-feb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1408.6956521739132" y="152.67857142857142"/>
         </scene>
-        <!--View Controller-->
+        <!--Collection Search-->
         <scene sceneID="prB-hH-FhD">
             <objects>
-                <viewController id="Zcu-Cu-5QD" sceneMemberID="viewController">
+                <viewController id="Zcu-Cu-5QD" customClass="CollectionSearch" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="GQL-UL-5Pe">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="PXa-Dv-SMf">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vWc-Fq-SXr">
                                     <size key="itemSize" width="128" height="128"/>
@@ -89,6 +96,11 @@
                             <constraint firstItem="PXa-Dv-SMf" firstAttribute="trailing" secondItem="upM-rU-Md1" secondAttribute="trailing" id="uNC-mF-Xbk"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="izf-M8-s7d"/>
+                    <connections>
+                        <outlet property="CollectionSearch" destination="PXa-Dv-SMf" id="9qz-8I-Xah"/>
+                        <outlet property="CollectionViewSearch" destination="PXa-Dv-SMf" id="ddr-WV-5cs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CGh-dI-bc5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -114,6 +126,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Intersecao_2" width="386" height="279"/>
+        <image name="Intersecao_3" width="386" height="279"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
